[tool.poetry]
name = "es_optimizer"
version = "v0.1.0"
description = "An optimizer using an evolutionary strategy."
authors = ["Philipp Wundrack"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
qhana_plugin_runner = { git= "https://github.com/UST-QuAntiL/qhana-plugin-runner.git", branch= "main" }

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.4.3"
Sphinx = "^4.0.0"
myst-parser = "^0.15.1"
invoke = "^1.5.0"
sphinx-rtd-theme = "^0.5.2"
pip-licenses = "^3.5.3"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py37"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2022
enable-autodoc = true
enable-napoleon = true
enable-autosectionlabel = true
enable-markdown = true
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true
# experimental/unstable feature
python_use_unqualified_type_names = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]
celery = ["https://docs.celeryproject.org/en/stable/"]
qhana_plugin_runner = ["https://qhana-plugin-runner.readthedocs.io/en/latest/"]

[tool.sphinx.autosectionlabel]
prefix-document = true

[tool.sphinx.myst]
# create anchors for h1 and h2
heading_anchors = 2
# markdown parser; see <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}

[tool.coverage.report]
# regexes for lines not to cover
exclude_lines = [
    # default coverage pragma
    "pragma: no cover",
    # protocol methods with ...
    "\\s*\\.\\.\\.\\s*",
    # unreachable code
    "if False:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
