[tool.poetry]
name = "es_optimizer"
version = "v0.1.0"
description = "An optimizer using an evolutionary strategy."
authors = ["Philipp Wundrack"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qhana_plugin_runner = {git = "https://github.com/UST-QuAntiL/qhana-plugin-runner.git", rev = "main"}
marshmallow = "^3.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
